[metadata]
name = ebka
version=0.1
url = ""
project_urls =
    Documentation = ""
    Code = ""
    Issue tracker = ""
license = Apache 2.0
author = Abhijit Suprem
author_email = asuprem@gatech.edu
maintainer = Abhijit Suprem
maintainer_email = asuprem@gatech.edu
description = A framework for writing and launching EBKA processes for streaming
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 1 - Planning
    Environment :: Kubernetes
    Framework :: ebka
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ebka = ebka.cli:cli

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    ebka
    tests

[coverage:paths]
source =
    ebka